tests/rustdoc-ui/feature-gate-doc_cfg_hide.stderr
error: unknown `doc` attribute `cfg_hide`
  --> $DIR/feature-gate-doc_cfg_hide.rs:3:8
   |
LL | #![doc(cfg_hide(test))]
   |        ^^^^^^^^^^^^^^
   |
   = note: `#[deny(invalid_doc_attributes)]` on by default

error: aborting due to 1 previous error

